Tweak MainActivity and Album info layouts. Modify MainActivity overflow menu icon.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_main" />
+                android:layout_gravity="center"
+                android:text="@string/title_main"
+                android:textColor="@color/toolbar_text_color"
+                android:textSize="24sp" />
 
         </androidx.appcompat.widget.Toolbar>
 
