--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="windowBackground">#424242</color>
+    <color name="toolbar_text_color">#e0e0e0</color>
     <color name="white">#FFFFFF</color>
-    <color name="gold">#e7bd42</color>
+    <color name="gold">#d3a41b</color>
 
 </resources>
