--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,35 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Base application theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <!-- Customize your theme here -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="cardViewStyle">@style/CardViewCustom</item>
     </style>
 
+    <!-- NoActionBar -->
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <!-- MainActivity -->
+    <style name="AppTheme.NoActionBar.MainActivity">
+        <item name="android:actionOverflowButtonStyle">@style/AlbumSortMenu</item>
+    </style>
+
+    <!-- Album Sort Overflow menu icon -->
+    <style name="AlbumSortMenu" parent="Widget.AppCompat.Light.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_baseline_sort_36</item>
+    </style>
+
+    <!-- CardView -->
+    <style name="CardViewCustom" parent="CardView">
+        <item name="cardCornerRadius">6dp</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
