--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,13 @@
     </style>
 
     <!-- NoActionBar -->
-    <style name="AppTheme.NoActionBar">
+    <style name="NoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <!-- MainActivity -->
-    <style name="AppTheme.NoActionBar.MainActivity">
+    <!-- TopAlbumsActivity -->
+    <style name="TopAlbumsActivity" parent="NoActionBar">
         <item name="android:actionOverflowButtonStyle">@style/AlbumSortMenu</item>
     </style>
 
