--- a/app/src/main/res/layout/activity_top_albums.xml
+++ b/app/src/main/res/layout/activity_top_albums.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/title_main"
+                android:text="@string/title_top_albums"
                 android:textColor="@color/toolbar_text_color"
                 android:textSize="24sp" />
 
