--- a/app/src/main/res/layout/album_view_holder.xml
+++ b/app/src/main/res/layout/album_view_holder.xml
@@ -95,6 +95,7 @@
                 app:layout_constraintHorizontal_bias="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvArtist"
+                app:layout_constraintVertical_bias="1"
                 tools:text="$9.99" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
