--- a/app/src/main/res/layout-land/activity_single_album.xml
+++ b/app/src/main/res/layout-land/activity_single_album.xml
@@ -16,7 +16,7 @@
 
         <!-- AppBar -->
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/single_ab"
+            android:id="@+id/single_appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay"
@@ -27,7 +27,7 @@
 
             <!-- Toolbar -->
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/single_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
@@ -35,6 +35,7 @@
 
                 <!-- Title -->
                 <TextView
+                    android:id="@+id/single_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -56,7 +57,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/single_ab">
+            app:layout_constraintTop_toBottomOf="@+id/single_appbar">
 
             <!-- Internal Layout Container -->
             <androidx.constraintlayout.widget.ConstraintLayout
